# FURLONG

./: .gitignore  README.md  column_info.json  column_info_fixed.json  config.yaml  pyproject.toml
src/furlong/: 00_txt2json.py  01_parse.py  02_rebuild.py  03_merge.py  04_split.py  05_binary-modeling.py  05_binary-optimized-modeling.py  05_first-modeling.py  05_modeling.py  05_rank-modeling.py  __init__.py  main.py  utility.py
